--- a/pom.xml
+++ b/pom.xml
@@ -63,8 +63,11 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>3.2.9</version>
+                <configuration>
+                    <mainClass>com.sams.SamsApplication</mainClass> <!-- this points to main application class -->
+                </configuration>
             </plugin>
-
             <!-- Maven Compiler Plugin -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
