--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,13 @@
             <version>2.2</version>
             <type>jar</type>
         </dependency>
+        
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.7.4</version>
+        </dependency>
+    
     </dependencies>
 
     <build>
