--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.open-in-view=false
 
 # Server port (default 8080)
-server.port=8081
+server.port=8080
 
 #manage database user connections
 spring.datasource.hikari.maximum-pool-size=10 
@@ -34,8 +34,7 @@ server.error.include-stacktrace=always
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=samsattendance@gmail.com
-spring.mail.password=MarvinTebogo8_
+spring.mail.password=hzrp djfk qltb mhwk
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.default-encoding=UTF-8
-
